--- a/login.html
+++ b/login.html
@@ -2,45 +2,114 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>Login - TravelTour</title>
+  <title>TravelTour - Login & Register</title>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
+
+  <style>
+    body {
+      background: url('https://source.unsplash.com/1600x900/?travel,landscape') no-repeat center center fixed;
+      background-size: cover;
+    }
+
+    .card {
+      backdrop-filter: blur(10px);
+      background-color: rgba(255, 255, 255, 0.9);
+    }
+
+    .form-control:focus {
+      box-shadow: none;
+      border-color: #0d6efd;
+    }
+
+    .nav-pills .nav-link.active {
+      background-color: #0d6efd;
+    }
+  </style>
 </head>
 <body>
 
 <div class="container mt-5">
-  <h2 class="text-center mb-4">Login to Your Account</h2>
+  <div class="row justify-content-center">
+    <div class="col-md-6">
+      <div class="card p-4 shadow">
+        <h3 class="text-center mb-4 fw-bold">Welcome to TravelTour</h3>
 
-  <div id="greeting" class="alert alert-success d-none text-center"></div>
+        <!-- Nav tabs -->
+        <ul class="nav nav-pills nav-justified mb-3" id="authTab" role="tablist">
+          <li class="nav-item" role="presentation">
+            <button class="nav-link active" id="login-tab" data-bs-toggle="pill" data-bs-target="#loginTab" type="button" role="tab">Login</button>
+          </li>
+          <li class="nav-item" role="presentation">
+            <button class="nav-link" id="register-tab" data-bs-toggle="pill" data-bs-target="#registerTab" type="button" role="tab">Register</button>
+          </li>
+        </ul>
 
-  <form id="loginForm">
-    <div class="mb-3">
-      <label for="email" class="form-label">Email address:</label>
-      <input type="email" class="form-control" id="email" required>
+        <!-- Tab Content -->
+        <div class="tab-content">
+          <!-- Login Tab -->
+          <div class="tab-pane fade show active" id="loginTab" role="tabpanel">
+            <form id="loginForm">
+              <div class="mb-3">
+                <label for="loginEmail" class="form-label">Email address</label>
+                <input type="email" class="form-control" id="loginEmail" required>
+              </div>
+              <div class="mb-3">
+                <label for="loginPwd" class="form-label">Password</label>
+                <input type="password" class="form-control" id="loginPwd" required>
+              </div>
+              <div class="form-check mb-3">
+                <input class="form-check-input" type="checkbox" id="remember">
+                <label class="form-check-label" for="remember">Remember me</label>
+              </div>
+              <button type="submit" class="btn btn-primary w-100">Login</button>
+              <a href="index.html" class="btn btn-outline-secondary d-block text-center mt-3">← Back to Homepage</a>
+
+            </form>
+          </div>
+
+          <!-- Register Tab -->
+          <div class="tab-pane fade" id="registerTab" role="tabpanel">
+            <form id="registerForm">
+              <div class="mb-3">
+                <label for="regName" class="form-label">Full Name</label>
+                <input type="text" class="form-control" id="regName" required>
+              </div>
+              <div class="mb-3">
+                <label for="regEmail" class="form-label">Email address</label>
+                <input type="email" class="form-control" id="regEmail" required>
+              </div>
+              <div class="mb-3">
+                <label for="regPwd" class="form-label">Password</label>
+                <input type="password" class="form-control" id="regPwd" required>
+              </div>
+              <button type="submit" class="btn btn-success w-100">Register</button>
+          
+            </form>
+          </div>
+        </div>
+      </div>
     </div>
-    <div class="mb-3">
-      <label for="pwd" class="form-label">Password:</label>
-      <input type="password" class="form-control" id="pwd" required>
-    </div>
-    <div class="form-check mb-3">
-      <input class="form-check-input" type="checkbox" id="remember">
-      <label class="form-check-label" for="remember">Remember me</label>
-    </div>
-    <button type="submit" class="btn btn-primary">Login</button>
-  </form>
+  </div>
 </div>
 
+<!-- Bootstrap JS -->
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
+
+<!-- JS Logic -->
 <script>
-  document.getElementById("loginForm").addEventListener("submit", function(e) {
+  document.getElementById("loginForm").addEventListener("submit", function (e) {
     e.preventDefault();
-
-    const email = document.getElementById("email").value;
+    const email = document.getElementById("loginEmail").value;
     const username = email.split('@')[0];
-
-    // Store the username
     localStorage.setItem("loggedInUser", username);
+    window.location.href = "index.html"; // or dashboard.html
+  });
 
-    // Redirect to tourist spots page
-    window.location.href = "index.html";
+  document.getElementById("registerForm").addEventListener("submit", function (e) {
+    e.preventDefault();
+    alert("Registration successful! You can now login.");
+    const loginTab = new bootstrap.Tab(document.querySelector('#login-tab'));
+    loginTab.show();
   });
 </script>
 
