--- a/index.html
+++ b/index.html
@@ -192,6 +192,31 @@
   </div>
 </section>
 
+<section>
+  <div class="container">
+    <h2 class="section-title fw-bold">Get in Touch</h2>
+    <div class="row g-4">
+      <div class="col-md-6">
+        <p><i class="bi bi-envelope-fill text-primary me-2"></i>support@traveltour.com</p>
+        <p><i class="bi bi-telephone-fill text-primary me-2"></i>+1 234 567 890</p>
+        <p><i class="bi bi-geo-alt-fill text-primary me-2"></i>123 Global Ave, Wanderlust City</p>
+      </div>
+      <div class="col-md-6">
+        <form>
+          <div class="mb-3">
+            <label for="contactName" class="form-label">Name</label>
+            <input type="text" class="form-control" id="contactName" placeholder="Your name">
+          </div>
+          <div class="mb-3">
+            <label for="contactMessage" class="form-label">Message</label>
+            <textarea class="form-control" id="contactMessage" rows="3" placeholder="Your message"></textarea>
+          </div>
+          <button type="submit" class="btn btn-primary px-4">Send</button>
+        </form>
+      </div>
+    </div>
+  </div>
+</section>
 
 
 
