modified:   tour1.html

--- a/tour1.html
+++ b/tour1.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>Tourist Spot 1 - TravelTour</title>
+  <title>Tokyo Tower, Japan - TravelTour</title>
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
 </head>
@@ -27,29 +27,27 @@
 
 <!-- Page Content -->
 <div class="container mt-5">
-  <h1 class="mb-4">Tourist Spot 1</h1>
+  <h1 class="mb-4">Tokyo Tower, Japan</h1>
   <div class="row">
     <div class="col-md-6">
-      <img src="https://i.pinimg.com/736x/a7/3c/bf/a73cbfbcf18054bf31ee42e6453c5d94.jpg" alt="Tourist Spot 1" class="img-fluid rounded shadow">
+      <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQ76UIzz5HHV6b3hfMeM5pLQZ6hZcTAoh7tOQ&s" alt="Tokyo Tower" class="img-fluid rounded shadow">
     </div>
     <div class="col-md-6">
       <h3>Description</h3>
       <p>
-        Welcome to Tourist Spot 1, a breathtaking destination known for its natural beauty, cultural heritage,
-        and unforgettable experiences. From stunning landscapes to vibrant local life, this location offers
-        something for every traveler.
+        Standing proudly in the heart of Tokyo, the Tokyo Tower is a symbol of Japan’s post-war rebirth and modern ambition.
+        Inspired by the Eiffel Tower, this iconic red-and-white structure offers panoramic views of the city’s skyline and Mount Fuji on clear days.
       </p>
       <p>
-        Enjoy guided tours, authentic cuisine, and a rich history that will leave you in awe.
-        Plan your adventure today and create lasting memories!
+        Whether you're here to admire the architecture, explore the observation decks, or enjoy nearby shopping and dining experiences, Tokyo Tower offers a blend of culture, entertainment, and history.
       </p>
 
       <h5 class="mt-4">Key Highlights:</h5>
       <ul>
-        <li>Panoramic views and scenic spots</li>
-        <li>Local food and crafts</li>
-        <li>Historical landmarks and museums</li>
-        <li>Family-friendly activities and nature trails</li>
+        <li>150m & 250m observation decks with breathtaking views</li>
+        <li>Tokyo Tower Aquarium and souvenir shops</li>
+        <li>FootTown complex with restaurants and exhibits</li>
+        <li>Illuminations during seasonal events</li>
       </ul>
 
       <a href="index.html" class="btn btn-primary mt-3">← Back to Tours</a>
