--- a/feedback.html
+++ b/feedback.html
@@ -46,7 +46,10 @@
     </div>
     <!-- COMPONENT 14: Submit -->
     <button type="submit" class="btn btn-success">Submit Feedback</button>
+    <a href="index.html" class="btn btn-primary">Back to Homepage</a>
   </form>
+
+
 </div>
 
 </body>
