--- a/tour1.html
+++ b/tour1.html
@@ -30,8 +30,10 @@
   <h1 class="mb-4">Tokyo Tower, Japan</h1>
   <div class="row">
     <div class="col-md-6">
+      <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQ76UIzz5HHV6b3hfMeM5pLQZ6hZcTAoh7tOQ&s" alt="Tokyo Tower" class="img-fluid rounded shadow"><br><br>
       <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQ76UIzz5HHV6b3hfMeM5pLQZ6hZcTAoh7tOQ&s" alt="Tokyo Tower" class="img-fluid rounded shadow">
     </div>
+    
     <div class="col-md-6">
       <h3>Description</h3>
       <p>
