--- a/tour3.html
+++ b/tour3.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>Tourist Spot 1 - TravelTour</title>
+  <title>Colosseum, Rome - TravelTour</title>
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
 </head>
@@ -27,30 +27,32 @@
 
 <!-- Page Content -->
 <div class="container mt-5">
-  <h1 class="mb-4">Tourist Spot 1</h1>
+  <h1 class="mb-4">Colosseum, Rome</h1>
   <div class="row">
     <div class="col-md-6">
-      <img src="https://i.pinimg.com/736x/a7/3c/bf/a73cbfbcf18054bf31ee42e6453c5d94.jpg" alt="Tourist Spot 1" class="img-fluid rounded shadow">
+      <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/d/de/Colosseo_2020.jpg/1200px-Colosseo_2020.jpg" alt="Colosseum" class="img-fluid rounded shadow">
     </div>
     <div class="col-md-6">
       <h3>Description</h3>
       <p>
-        Welcome to Tourist Spot 1, a breathtaking destination known for its natural beauty, cultural heritage,
-        and unforgettable experiences. From stunning landscapes to vibrant local life, this location offers
-        something for every traveler.
+        The **Colosseum**, located in the heart of Rome, is one of the most iconic landmarks in the world. This ancient amphitheater, also known as the Flavian Amphitheater, was completed in AD 80 and once hosted gladiatorial contests and public spectacles. Today, it stands as a testament to Rome's architectural ingenuity and history.
       </p>
       <p>
-        Enjoy guided tours, authentic cuisine, and a rich history that will leave you in awe.
-        Plan your adventure today and create lasting memories!
+        The Colosseum could hold up to **50,000 spectators** and was the stage for brutal gladiatorial fights, animal hunts, and mock naval battles. It remains one of the largest and most well-preserved ancient structures in the world.
       </p>
 
       <h5 class="mt-4">Key Highlights:</h5>
       <ul>
-        <li>Panoramic views and scenic spots</li>
-        <li>Local food and crafts</li>
-        <li>Historical landmarks and museums</li>
-        <li>Family-friendly activities and nature trails</li>
+        <li>Explore the ancient gladiator arena</li>
+        <li>Discover the underground chambers where gladiators and animals were held</li>
+        <li>Visit the upper levels for panoramic views of Rome</li>
+        <li>Learn about the history through informative exhibitions</li>
       </ul>
+
+      <h5 class="mt-4">Visiting the Colosseum:</h5>
+      <p>
+        The Colosseum is open to visitors year-round, and guided tours are available to explore its vast history. Tickets grant access to the Colosseum, the Roman Forum, and Palatine Hill, offering a complete experience of ancient Rome.
+      </p>
 
       <a href="index.html" class="btn btn-primary mt-3">← Back to Tours</a>
     </div>
