--- a/tour5.html
+++ b/tour5.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>Tourist Spot 1 - TravelTour</title>
+  <title>Burj Khalifa - TravelTour</title>
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
 </head>
@@ -27,30 +27,33 @@
 
 <!-- Page Content -->
 <div class="container mt-5">
-  <h1 class="mb-4">Tourist Spot 1</h1>
+  <h1 class="mb-4">Burj Khalifa, Dubai</h1>
   <div class="row">
     <div class="col-md-6">
-      <img src="https://i.pinimg.com/736x/a7/3c/bf/a73cbfbcf18054bf31ee42e6453c5d94.jpg" alt="Tourist Spot 1" class="img-fluid rounded shadow">
+      <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcSYMrh10wRtoZRYa8ze5o9CLEqjo0rpas81qA&s" alt="Burj Khalifa" class="img-fluid rounded shadow">
     </div>
     <div class="col-md-6">
       <h3>Description</h3>
       <p>
-        Welcome to Tourist Spot 1, a breathtaking destination known for its natural beauty, cultural heritage,
-        and unforgettable experiences. From stunning landscapes to vibrant local life, this location offers
-        something for every traveler.
+        The **Burj Khalifa** is a stunning architectural marvel and the tallest building in the world, standing at a height of 828 meters (2,717 feet). Located in **Dubai, United Arab Emirates**, it has become a symbol of modern engineering and luxury. Designed by the architect **Adrian Smith**, the Burj Khalifa features a sleek, futuristic design inspired by the shape of a desert flower.
       </p>
       <p>
-        Enjoy guided tours, authentic cuisine, and a rich history that will leave you in awe.
-        Plan your adventure today and create lasting memories!
+        The Burj Khalifa is not just a skyscraper; it’s a hub for both business and leisure. With 163 floors, it houses offices, residential apartments, a hotel, and observation decks offering breathtaking views of Dubai’s skyline, the Arabian Gulf, and beyond. Visitors can ascend to the **At The Top** observation deck located on the 148th floor for a stunning panoramic experience.
       </p>
 
       <h5 class="mt-4">Key Highlights:</h5>
       <ul>
-        <li>Panoramic views and scenic spots</li>
-        <li>Local food and crafts</li>
-        <li>Historical landmarks and museums</li>
-        <li>Family-friendly activities and nature trails</li>
+        <li>At The Top observation deck on the 148th floor</li>
+        <li>Luxurious hotel and residential apartments</li>
+        <li>World-class restaurants with panoramic views</li>
+        <li>Exclusive shopping experiences and art installations</li>
+        <li>Stunning nightly light and fountain shows in the nearby Dubai Fountain</li>
       </ul>
+
+      <h5 class="mt-4">Visiting Burj Khalifa:</h5>
+      <p>
+        The **Burj Khalifa** offers a range of experiences for tourists, including guided tours, dining, and access to the observation deck. The experience is best enjoyed at sunset, where you can witness Dubai’s vibrant cityscape bathed in the golden glow of the setting sun.
+      </p>
 
       <a href="index.html" class="btn btn-primary mt-3">← Back to Tours</a>
     </div>
