--- a/tour4.html
+++ b/tour4.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>Sydney Opera House - TravelTour</title>
+  <title>Port Barton, Palawan - TravelTour</title>
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
 </head>
@@ -27,32 +27,29 @@
 
 <!-- Page Content -->
 <div class="container mt-5">
-  <h1 class="mb-4">Sydney Opera House</h1>
+  <h1 class="mb-4">Port Barton, Palawan</h1>
   <div class="row">
     <div class="col-md-6">
-      <img src="https://media.architecturaldigest.com/photos/63d82d299dd44a3242d15ade/16:9/w_2580,c_limit/GettyImages-982774858.jpg" alt="Sydney Opera House" class="img-fluid rounded shadow">
+      <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcRZu59qXXQdL9i_WnYh6s8pkBLvoPBDG1ANHQ&s" alt="Port Barton Beach" class="img-fluid rounded shadow"><br><br>
+      <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTS79eYZ9MjXtcHIEuXzXrnjHw1_V4zWYpoAQ&s" alt="Port Barton Landscape" class="img-fluid rounded shadow">
     </div>
+    
     <div class="col-md-6">
       <h3>Description</h3>
       <p>
-        The **Sydney Opera House** is one of the most recognizable and iconic landmarks in the world. Located in Bennelong Point, Sydney Harbour, this stunning architectural masterpiece was designed by Danish architect **Jørn Utzon** and opened in 1973. Its unique design, featuring a series of large white sails, has made it a symbol of both Sydney and Australia.
+        Port Barton is a peaceful coastal village in San Vicente, Palawan, known for its laid-back atmosphere, beautiful beaches, and crystal-clear waters. It's a hidden gem offering a quiet alternative to the more commercialized areas of Palawan.
       </p>
       <p>
-        The Opera House is a hub for performing arts and hosts over 1,500 performances annually, ranging from opera, ballet, and theater, to music concerts and more. It’s not just a venue; it’s a cultural landmark that represents the creativity and artistic spirit of Australia.
+        Whether you're snorkeling, island hopping, watching sea turtles, or simply relaxing by the beach, Port Barton offers a serene escape surrounded by nature.
       </p>
 
       <h5 class="mt-4">Key Highlights:</h5>
       <ul>
-        <li>Explore the architectural design of the sails</li>
-        <li>Take a guided tour to learn about its history and construction</li>
-        <li>Enjoy performances in the Concert Hall, Drama Theatre, and Playhouse</li>
-        <li>Admire the panoramic views of Sydney Harbour</li>
+        <li>Snorkeling with sea turtles and vibrant coral reefs</li>
+        <li>Island hopping to Paradise Island, German Island, and more</li>
+        <li>Relaxed atmosphere and fewer tourists</li>
+        <li>Scenic sunsets and beachfront dining</li>
       </ul>
-
-      <h5 class="mt-4">Visiting the Sydney Opera House:</h5>
-      <p>
-        Visitors can enjoy guided tours of the Opera House to explore its theatres and learn about its fascinating design and history. The site also offers a variety of dining options and a beautiful view of the Sydney Harbour.
-      </p>
 
       <a href="index.html" class="btn btn-primary mt-3">← Back to Tours</a>
     </div>
