--- a/tour1.html
+++ b/tour1.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>Tokyo Tower, Japan - TravelTour</title>
+  <title>El Nido, Palawan - TravelTour</title>
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
 </head>
@@ -27,29 +27,29 @@
 
 <!-- Page Content -->
 <div class="container mt-5">
-  <h1 class="mb-4">Tokyo Tower, Japan</h1>
+  <h1 class="mb-4">El Nido, Palawan</h1>
   <div class="row">
     <div class="col-md-6">
-      <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQ76UIzz5HHV6b3hfMeM5pLQZ6hZcTAoh7tOQ&s" alt="Tokyo Tower" class="img-fluid rounded shadow"><br><br>
-      <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQ76UIzz5HHV6b3hfMeM5pLQZ6hZcTAoh7tOQ&s" alt="Tokyo Tower" class="img-fluid rounded shadow">
+      <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTV9hcxrZgLLDOb5ySk3A_7Lw5JrOJZV6PpLQ&s" alt="El Nido Palawan" class="img-fluid rounded shadow"><br><br>
+      <img src="https://lp-cms-production.imgix.net/2019-06/78349125.jpg?w=1095&fit=crop&crop=faces%2Cedges&auto=format&q=75" alt="El Nido Lagoon" class="img-fluid rounded shadow">
     </div>
     
     <div class="col-md-6">
       <h3>Description</h3>
       <p>
-        Standing proudly in the heart of Tokyo, the Tokyo Tower is a symbol of Japan’s post-war rebirth and modern ambition.
-        Inspired by the Eiffel Tower, this iconic red-and-white structure offers panoramic views of the city’s skyline and Mount Fuji on clear days.
+        El Nido is a breathtaking coastal town in the northern part of Palawan, Philippines, known for its crystal-clear waters, dramatic limestone cliffs, and vibrant marine life.
+        It serves as the gateway to the Bacuit Archipelago, a paradise of hidden lagoons, white-sand beaches, and coral reefs.
       </p>
       <p>
-        Whether you're here to admire the architecture, explore the observation decks, or enjoy nearby shopping and dining experiences, Tokyo Tower offers a blend of culture, entertainment, and history.
+        Whether you're into island-hopping, snorkeling, diving, or simply soaking up the sun, El Nido offers an unforgettable experience surrounded by natural wonders.
       </p>
 
       <h5 class="mt-4">Key Highlights:</h5>
       <ul>
-        <li>150m & 250m observation decks with breathtaking views</li>
-        <li>Tokyo Tower Aquarium and souvenir shops</li>
-        <li>FootTown complex with restaurants and exhibits</li>
-        <li>Illuminations during seasonal events</li>
+        <li>Island hopping tours to Big Lagoon, Small Lagoon, and Secret Beach</li>
+        <li>Snorkeling and scuba diving in coral-rich waters</li>
+        <li>Kayaking through turquoise lagoons and coves</li>
+        <li>Stunning sunsets and vibrant local food scene</li>
       </ul>
 
       <a href="index.html" class="btn btn-primary mt-3">← Back to Tours</a>
