--- a/tour2.html
+++ b/tour2.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>Statue of Liberty, NYC - TravelTour</title>
+  <title>Coron, Palawan - TravelTour</title>
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
 </head>
@@ -27,35 +27,29 @@
 
 <!-- Page Content -->
 <div class="container mt-5">
-  <h1 class="mb-4">Statue of Liberty, NYC</h1>
+  <h1 class="mb-4">Coron, Palawan</h1>
   <div class="row">
     <div class="col-md-6">
-      <img src="https://cdn-imgix.headout.com/tour/30357/TOUR-IMAGE/6cdcf542-452d-4897-beed-76cf68f154e4-1act-de005e04-05d9-4715-96b0-6a089d5c3460.jpg?auto=format&w=1222.3999999999999&h=687.6&q=90&fit=crop&ar=16%3A9&crop=faces" alt="Statue of Liberty" class="img-fluid rounded shadow mb-4">
-      <img src="https://cdn-imgix.headout.com/tour/30357/TOUR-IMAGE/6cdcf542-452d-4897-beed-76cf68f154e4-1act-de005e04-05d9-4715-96b0-6a089d5c3460.jpg?auto=format&w=1222.3999999999999&h=687.6&q=90&fit=crop&ar=16%3A9&crop=faces" alt="Statue of Liberty" class="img-fluid rounded shadow">
+      <img src="https://cdn.shopify.com/s/files/1/1699/6633/files/tropical-beach-in-coron-philippines-2021-09-01-23-20-05-utc_1024x1024.jpg?v=1699393049" alt="Coron Overview" class="img-fluid rounded shadow"><br><br>
+      <!-- <img src="" alt="Coron Viewpoint" class="img-fluid rounded shadow"> -->
     </div>
     
     <div class="col-md-6">
       <h3>Description</h3>
       <p>
-        The Statue of Liberty, located on Liberty Island in New York Harbor, is one of the most iconic symbols of the United States and freedom. It was a gift from France to commemorate the Centennial of the American Declaration of Independence and symbolize the friendship between the two nations.
+        Coron is a world-renowned destination in northern Palawan, Philippines, celebrated for its pristine lagoons, crystal-clear lakes, dramatic limestone cliffs, and vibrant marine life. It's a paradise for nature lovers, divers, and adventure seekers.
       </p>
       <p>
-        Officially dedicated on **October 28, 1886**, the statue stands **305 feet (93 meters)** tall, including its pedestal, and is made of copper. Over time, its color has changed from metallic copper to its famous **green patina** due to oxidation.
+        From the breathtaking Kayangan Lake to the mysterious Twin Lagoon and historic WWII shipwreck dive sites, Coron offers unforgettable experiences for every kind of traveler.
       </p>
 
       <h5 class="mt-4">Key Highlights:</h5>
       <ul>
-        <li>Designed by French sculptor **Frédéric Auguste Bartholdi**, with internal structure by **Gustave Eiffel**.</li>
-        <li>The statue represents **Libertas**, the Roman goddess of freedom, holding a torch and a tablet inscribed with the date of the U.S. Declaration of Independence (July 4, 1776).</li>
-        <li>The **torch** symbolizes enlightenment, while the **crown** has **seven rays** representing the seven seas and continents.</li>
-        <li>Visitors can access the **pedestal** and **crown** (limited access) to enjoy panoramic views of New York City and the harbor.</li>
-        <li>The statue is a symbol of freedom and democracy, especially for immigrants arriving in the U.S. through Ellis Island.</li>
+        <li>Kayangan Lake – the cleanest lake in the Philippines</li>
+        <li>Twin Lagoon – stunning twin bodies of water surrounded by karst cliffs</li>
+        <li>World War II Japanese shipwreck dive sites</li>
+        <li>Hot springs, island hopping, and white-sand beaches</li>
       </ul>
-
-      <h5 class="mt-4">Visiting the Statue of Liberty:</h5>
-      <p>
-        Visitors can take a ferry from **Battery Park** to **Liberty Island**, where the statue stands. There are different levels of access to the statue, including the **pedestal** and the **crown**. Limited tickets are available to access the crown. Liberty Island also offers a museum showcasing the history and significance of the statue.
-      </p>
 
       <a href="index.html" class="btn btn-primary mt-3">← Back to Tours</a>
     </div>
