--- a/tour3.html
+++ b/tour3.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>Colosseum, Rome - TravelTour</title>
+  <title>Puerto Princesa Underground River - TravelTour</title>
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
 </head>
@@ -27,32 +27,31 @@
 
 <!-- Page Content -->
 <div class="container mt-5">
-  <h1 class="mb-4">Colosseum, Rome</h1>
+  <h1 class="mb-4">Puerto Princesa Underground River, Palawan</h1>
   <div class="row">
     <div class="col-md-6">
-      <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/d/de/Colosseo_2020.jpg/1200px-Colosseo_2020.jpg" alt="Colosseum" class="img-fluid rounded shadow">
+      <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQNjZMskQP6bJGxVtk3E34_k7nr55Wav_a95w&s" class="img-fluid rounded shadow"><br><br>
+      <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTD4EYX2zcDzjy73upE4bA2mrKSUWTEDvbcpw&s" alt="Underground River Tour" class="img-fluid rounded shadow">
     </div>
+    
     <div class="col-md-6">
       <h3>Description</h3>
       <p>
-        The **Colosseum**, located in the heart of Rome, is one of the most iconic landmarks in the world. This ancient amphitheater, also known as the Flavian Amphitheater, was completed in AD 80 and once hosted gladiatorial contests and public spectacles. Today, it stands as a testament to Rome's architectural ingenuity and history.
+        The Puerto Princesa Underground River is one of the New 7 Wonders of Nature, located in the beautiful province of Palawan, Philippines.
+        It features a spectacular limestone karst landscape with an 8.2 km navigable underground river, making it one of the longest of its kind in the world.
       </p>
       <p>
-        The Colosseum could hold up to **50,000 spectators** and was the stage for brutal gladiatorial fights, animal hunts, and mock naval battles. It remains one of the largest and most well-preserved ancient structures in the world.
+        Visitors can enjoy a boat tour through the subterranean cave system, marveling at unique rock formations, stalactites, and stalagmites,
+        all while immersed in the tranquility of this UNESCO World Heritage Site.
       </p>
 
       <h5 class="mt-4">Key Highlights:</h5>
       <ul>
-        <li>Explore the ancient gladiator arena</li>
-        <li>Discover the underground chambers where gladiators and animals were held</li>
-        <li>Visit the upper levels for panoramic views of Rome</li>
-        <li>Learn about the history through informative exhibitions</li>
+        <li>Explore the 8.2 km underground river by paddle boat</li>
+        <li>See stunning rock formations and cave ecosystems</li>
+        <li>Part of the Puerto Princesa Subterranean River National Park</li>
+        <li>Surrounded by rich biodiversity and pristine nature</li>
       </ul>
-
-      <h5 class="mt-4">Visiting the Colosseum:</h5>
-      <p>
-        The Colosseum is open to visitors year-round, and guided tours are available to explore its vast history. Tickets grant access to the Colosseum, the Roman Forum, and Palatine Hill, offering a complete experience of ancient Rome.
-      </p>
 
       <a href="index.html" class="btn btn-primary mt-3">← Back to Tours</a>
     </div>
