--- a/tour5.html
+++ b/tour5.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>Burj Khalifa - TravelTour</title>
+  <title>Nacpan Beach, El Nido - TravelTour</title>
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
 </head>
@@ -27,33 +27,29 @@
 
 <!-- Page Content -->
 <div class="container mt-5">
-  <h1 class="mb-4">Burj Khalifa, Dubai</h1>
+  <h1 class="mb-4">Nacpan Beach, El Nido</h1>
   <div class="row">
     <div class="col-md-6">
-      <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcSYMrh10wRtoZRYa8ze5o9CLEqjo0rpas81qA&s" alt="Burj Khalifa" class="img-fluid rounded shadow">
+      <img src="https://static.wixstatic.com/media/853349_9b71bd072ced4fcebcd5851047fd23f5~mv2.jpg/v1/fill/w_1000,h_666,al_c,q_85,usm_0.66_1.00_0.01/853349_9b71bd072ced4fcebcd5851047fd23f5~mv2.jpg" class="img-fluid rounded shadow"><br><br>
+      <!-- <img src="" alt="Relaxing at Nacpan" class="img-fluid rounded shadow"> -->
     </div>
+    
     <div class="col-md-6">
       <h3>Description</h3>
       <p>
-        The **Burj Khalifa** is a stunning architectural marvel and the tallest building in the world, standing at a height of 828 meters (2,717 feet). Located in **Dubai, United Arab Emirates**, it has become a symbol of modern engineering and luxury. Designed by the architect **Adrian Smith**, the Burj Khalifa features a sleek, futuristic design inspired by the shape of a desert flower.
+        Nacpan Beach is a pristine stretch of golden sand located about 45 minutes north of El Nido town. Known for its peaceful atmosphere and raw natural beauty, it offers a tranquil escape from the more tourist-heavy areas.
       </p>
       <p>
-        The Burj Khalifa is not just a skyscraper; it’s a hub for both business and leisure. With 163 floors, it houses offices, residential apartments, a hotel, and observation decks offering breathtaking views of Dubai’s skyline, the Arabian Gulf, and beyond. Visitors can ascend to the **At The Top** observation deck located on the 148th floor for a stunning panoramic experience.
+        With calm waves, swaying palm trees, and a long coastline ideal for sunbathing or a quiet walk, Nacpan is perfect for travelers looking to unwind, enjoy a drink by the beach, or witness a breathtaking sunset.
       </p>
 
       <h5 class="mt-4">Key Highlights:</h5>
       <ul>
-        <li>At The Top observation deck on the 148th floor</li>
-        <li>Luxurious hotel and residential apartments</li>
-        <li>World-class restaurants with panoramic views</li>
-        <li>Exclusive shopping experiences and art installations</li>
-        <li>Stunning nightly light and fountain shows in the nearby Dubai Fountain</li>
+        <li>4-kilometer stretch of golden sand and clear waters</li>
+        <li>Great for swimming, sunbathing, and relaxing</li>
+        <li>Less crowded than other El Nido destinations</li>
+        <li>Home to the Twin Beaches: Nacpan and Calitang</li>
       </ul>
-
-      <h5 class="mt-4">Visiting Burj Khalifa:</h5>
-      <p>
-        The **Burj Khalifa** offers a range of experiences for tourists, including guided tours, dining, and access to the observation deck. The experience is best enjoyed at sunset, where you can witness Dubai’s vibrant cityscape bathed in the golden glow of the setting sun.
-      </p>
 
       <a href="index.html" class="btn btn-primary mt-3">← Back to Tours</a>
     </div>
