--- a/index.html
+++ b/index.html
@@ -6,60 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
   <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css" rel="stylesheet">
-  <style>
-    body, html {
-      height: 100%;
-    }
-
-    .wrapper {
-      display: flex;
-      flex-direction: column;
-      min-height: 100vh;
-    }
-
-    main {
-      flex: 1;
-    }
-
-    .scrolling-wrapper {
-      display: flex;
-      flex-wrap: nowrap;
-      overflow-x: auto;
-      gap: 1.2rem;
-      padding-bottom: 1rem;
-    }
-
-    .scrolling-wrapper::-webkit-scrollbar {
-      height: 8px;
-    }
-
-    .scrolling-wrapper::-webkit-scrollbar-thumb {
-      background-color: #0d6efd;
-      border-radius: 10px;
-    }
-
-    .tour-card {
-      flex: 0 0 auto;
-      width: 260px;
-      border: 1px solid #e3e3e3;
-      border-radius: 10px;
-      box-shadow: 0 4px 6px rgba(0, 0, 0, 0.08);
-    }
-
-    section {
-      padding-top: 60px;
-      padding-bottom: 60px;
-    }
-
-    .section-title {
-      margin-bottom: 2rem;
-      text-align: center;
-    }
-
-    .bg-lightblue {
-      background-color: #f3f9ff;
-    }
-  </style>
+  <link rel="stylesheet" href="index.css">
 </head>
 <body class="wrapper">
 
