--- a/login.html
+++ b/login.html
@@ -4,20 +4,7 @@
   <meta charset="UTF-8">
   <title>Login - TravelTour</title>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
-  <style>
-    body {
-      background: url('https://source.unsplash.com/1600x900/?travel,landscape') no-repeat center center fixed;
-      background-size: cover;
-    }
-    .card {
-      backdrop-filter: blur(10px);
-      background-color: rgba(255, 255, 255, 0.9);
-    }
-    .form-control:focus {
-      box-shadow: none;
-      border-color: #0d6efd;
-    }
-  </style>
+ <link rel="stylesheet" href="login.css">
 </head>
 <body>
 
