--- a/btour1.html
+++ b/btour1.html
@@ -7,8 +7,6 @@
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
 </head>
 <body>
-
-<!-- Navbar -->
 <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
   <div class="container">
     <a class="navbar-brand" href="index.html">TravelTour</a>
@@ -17,7 +15,7 @@
     </button>
     <div class="collapse navbar-collapse" id="navContent">
       <ul class="navbar-nav ms-auto">
-        <li class="nav-item"><a class="nav-link" href="tour.html">Tours</a></li>
+        <li class="nav-item"><a class="nav-link" href="index.html">Tours</a></li>
         <li class="nav-item"><a class="nav-link" href="login.html">Login</a></li>
         <li class="nav-item"><a class="nav-link" href="feedback.html">Feedback</a></li>
       </ul>
@@ -25,7 +23,6 @@
   </div>
 </nav>
 
-<!-- Page Content -->
 <div class="container mt-5">
   <h1 class="mb-4">Puerto Princesa Underground River, Palawan</h1>
   <div class="row">
@@ -37,12 +34,10 @@
     <div class="col-md-6">
       <h3>Description</h3>
       <p>
-        The Puerto Princesa Underground River is one of the New 7 Wonders of Nature, located in the beautiful province of Palawan, Philippines.
-        It features a spectacular limestone karst landscape with an 8.2 km navigable underground river, making it one of the longest of its kind in the world.
+        The Puerto Princesa Underground River, a New7Wonders of Nature, is found in the picturesque province of Palawan in the Philippines. The underground river meanders through a spectacular limestone karst landscape and is 8.2 kilometers long, which makes it the second longest in the world of navigable underground rivers.
       </p>
       <p>
-        Visitors can enjoy a boat tour through the subterranean cave system, marveling at unique rock formations, stalactites, and stalagmites,
-        all while immersed in the tranquility of this UNESCO World Heritage Site.
+        Visitors can take a boat tour through the underground cave system to admire unique rock formations, stalactites, and stalagmites, and savor the serenity of this UNESCO World Heritage Site.
       </p>
 
       <h5 class="mt-4">Key Highlights:</h5>
@@ -58,7 +53,6 @@
   </div>
 </div>
 
-<!-- Footer -->
 <footer class="bg-dark text-white text-center py-3 mt-5">
   <p>&copy; 2025 TravelTour. All rights reserved.</p>
 </footer>
