--- a/btour2.html
+++ b/btour2.html
@@ -17,7 +17,7 @@
     </button>
     <div class="collapse navbar-collapse" id="navContent">
       <ul class="navbar-nav ms-auto">
-        <li class="nav-item"><a class="nav-link" href="tour.html">Tours</a></li>
+        <li class="nav-item"><a class="nav-link" href="index.html">Tours</a></li>
         <li class="nav-item"><a class="nav-link" href="login.html">Login</a></li>
         <li class="nav-item"><a class="nav-link" href="feedback.html">Feedback</a></li>
       </ul>
@@ -37,8 +37,8 @@
     <div class="col-md-6">
       <h3>Description</h3>
       <p>
-        El Nido is a breathtaking coastal town in the northern part of Palawan, Philippines, known for its crystal-clear waters, dramatic limestone cliffs, and vibrant marine life.
-        It serves as the gateway to the Bacuit Archipelago, a paradise of hidden lagoons, white-sand beaches, and coral reefs.
+        El Nido is a really beautiful coastal town in the north of Palawan, Philippines. It has the clearest waters, most dramatic limestone cliffs, and plenty of marine life.
+        Gateway-to-bacuit archipelago-the-tagalog-dreamland-with-hidden-waters, white-dark beaches, and long coral reefs.
       </p>
       <p>
         Whether you're into island-hopping, snorkeling, diving, or simply soaking up the sun, El Nido offers an unforgettable experience surrounded by natural wonders.
