--- a/tour3.html
+++ b/tour3.html
@@ -17,7 +17,7 @@
     </button>
     <div class="collapse navbar-collapse" id="navContent">
       <ul class="navbar-nav ms-auto">
-        <li class="nav-item"><a class="nav-link" href="tour.html">Tours</a></li>
+        <li class="nav-item"><a class="nav-link" href="index.html">Tours</a></li>
         <li class="nav-item"><a class="nav-link" href="login.html">Login</a></li>
         <li class="nav-item"><a class="nav-link" href="feedback.html">Feedback</a></li>
       </ul>
